# face_recognition

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: config.yaml
launch/: test.launch
scripts/: data_set_generator.py  training.py
src/: face_recognition_node.py
src/face_recognition_lib/: __init__.py  face_recognition_lib.py
